--- a/mahadev_policy.html
+++ b/mahadev_policy.html
@@ -13,6 +13,7 @@
 
 <ul>
     <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
+    <li><a href="https://developers.facebook.com/docs/audience-network/policy/" target="_blank">Facebook Audience Network Policy</a></li>
 </ul>
 
 <p><strong>Log Data</strong></p>
