--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <ul>
     <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
     <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
+    <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a></li>
     
     <!-- <li><a href="https://developers.facebook.com/docs/audience-network/policy/" target="_blank">Facebook Audience Network Policy</a></li> -->
 </ul>
